--- a/deployments/docker-compose.prod.yml
+++ b/deployments/docker-compose.prod.yml
@@ -16,6 +16,11 @@ services:
       VIRTUAL_HOST: "mages.getid.org"
       LETSENCRYPT_HOST: "mages.getid.org"
 
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+
 networks:
   nginx-proxy:
     external: true
